--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "leaflet": "^1.7.1",
+    "leaflet.vectorgrid": "^1.3.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
